# insurance-ebm

./: README.md  pyproject.toml  run_tests_databricks.py
.github/workflows/: ci.yml
notebooks/: benchmark.py  insurance_ebm_demo.py
src/insurance_ebm/: __init__.py  _comparison.py  _diagnostics.py  _model.py  _monotonicity.py  _relativities.py
tests/: conftest.py  test_comparison.py  test_diagnostics.py  test_model.py  test_monotonicity.py  test_relativities.py
