[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "insurance-ebm"
version = "0.2.0"
description = "Deprecated. Use insurance-gam instead."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Burning Cost", email = "pricing.frontier@gmail.com" }]
keywords = ["insurance", "pricing", "EBM", "explainable boosting", "interpretML", "actuarial"]
classifiers = [
    "Development Status :: 7 - Inactive",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "insurance-gam>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/burning-cost/insurance-ebm"
Repository = "https://github.com/burning-cost/insurance-ebm"

[tool.hatch.build.targets.wheel]
packages = ["src/insurance_ebm"]
